--- a/.github/workflows/readme-scribe.yml
+++ b/.github/workflows/readme-scribe.yml
@@ -5,7 +5,10 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: "0 */1 * * *"
+    - cron: '0 0 */1 * *'
+
+permissions:
+  contents: write
 
 jobs:
   markscribe:
